# Mywork

./: .gitignore  README.md  main.py  not_a_list.json  pyproject.toml  requirements.txt
data/: invalid.json  operations.json
src/: decorators.py  external_api.py  file_operations.py  finance_operations.py  generators.py  masks.py  processing.py  utils.py  widget.py
tests/: test_decorators.py  test_external_api.py  test_file_operations.py  test_finance_operations.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
