[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Tus14 <t-tarasenko@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.2.1"
requests = "^2.32.5"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.18.2"
black = "^25.9.0"
isort = "^7.0.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^7.0.0"
pytest = "^9.0.1"
types-requests = "^2.32.4.20250913"
mypy = "^1.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[[tool.mypy.overrides]]
module = ["dotenv"]
ignore_missing_imports = true

[tool.black]
line-length = 119
exclude = 'git'

[tool.isort]
line_length = 119